feat: implement api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,14 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "@features/*": [
+        "./src/features/*"
+      ],
+      "@app/*": [
+        "./src/app/*"
+      ]
+    },
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
